k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 80
    name: web
  selector:
    app: rdicidr
